1.4.0
 - added Windows SSPI client/server (source only)
1.3.0
 - added Java GSS client/server (source only)
 - pam_debug.so: corrected hex display
 - pamtest: check conv function
 - pamtest: zero pam response fields for Linux