@@ -37,6 +37,7 @@ specifies the name type of the
 parameter.
 Valid name types are: none, hostbased, krb5.
 .SH "SEE ALSO"
+gss-dump(1),
 gss-server(1)
 .SH AUTHORS
 David Leonard, Quest Software, Inc.
