@@ -32,6 +32,7 @@ specifies the host-based service name this server will use
 .RI \-b\  bug
 Enables test support for the given Vintela bug number.
 .SH "SEE ALSO"
+gss-dump(1),
 gss-client(1)
 .SH AUTHORS
 David Leonard, Quest Software, Inc.
